# HeteroEdge

./: README.md
concurrent_bandwidth_test/: README.md
docs/: qwen3_0.6b_heterogeneous_analysis.md
fast_sync_test/: CMakeLists.txt  NPU_POLL_DESIGN.md  README.md  run_on_device.sh
fast_sync_test/custom_op/: FlagPollRmsNormImpl.cpp  FlagPollRmsNormInterface.cpp  Makefile  build.sh
fast_sync_test/kernels/: rmsnorm.cl
fast_sync_test/src/: common.h  gpu_engine.cpp  gpu_engine.h  main.cpp  npu_engine.cpp  npu_engine.h  pipeline.cpp  pipeline.h
gpu_bandwidth_test/: CMakeLists.txt  build_android.sh  run_on_device.sh
gpu_bandwidth_test/src/: main.cpp
graph_launch_test/: CMakeLists.txt  README.md  run_on_device.sh
graph_launch_test/src/: common.h  graph_builder.cpp  graph_builder.h  main.cpp  qnn_setup.cpp  qnn_setup.h
htp_bandwidth_test/: README.md
htp_bandwidth_test/src/: main.cpp
qnn_execute_async_reference/: DOC_PATHS.md  README.md  execute_async_example.c  validate_async_support.c
rmsnorm/: README.md
rmsnorm/custom_op/: Makefile  RmsNormOpPackageInterface.cpp  build.sh
rmsnorm/custom_op/test/: CMakeLists.txt  build_test.sh  main.cpp  run_on_device.sh
unified_bandwidth_test/: CMakeLists.txt  README.md  run_on_device.sh
unified_bandwidth_test/src/: gpu_bandwidth.cpp  gpu_bandwidth.h  htp_bandwidth.cpp  htp_bandwidth.h  main.cpp
